--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -51,7 +51,7 @@ outputs:
       build:
         - {{ compiler("c") }}
         - {{ compiler("cxx") }}
-        - arm-variant * {{ arm_variant_type }}  # [aarch64]
+        #- arm-variant * {{ arm_variant_type }}  # [aarch64]
         - patchelf <0.18.0                      # [linux]
       host:
         - cuda-version {{ cuda_version }}
@@ -83,8 +83,8 @@ outputs:
       - Library\include                                   # [win]
       - Library\lib\nvjpeg.lib                            # [win]
     requirements:
-      build:
-        - arm-variant * {{ arm_variant_type }}  # [aarch64]
+      #build:
+        #- arm-variant * {{ arm_variant_type }}  # [aarch64]
       host:
         - cuda-version {{ cuda_version }}
       run:
@@ -119,8 +119,8 @@ outputs:
     files:
       - targets/{{ target_name }}/lib/libnvjpeg_static.a  # [linux]
     requirements:
-      build:
-        - arm-variant * {{ arm_variant_type }}  # [aarch64]
+      #build:
+        #- arm-variant * {{ arm_variant_type }}  # [aarch64]
       host:
         - cuda-version {{ cuda_version }}
       run:
