--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,6 +38,17 @@ outputs:
       - lib/libnvjpeg.so.*            # [linux]
       - targets/{{ target_name }}/lib/libnvjpeg.so.*  # [linux]
       - Library\bin\nvjpeg*.dll       # [win]
+    build:
+      runpath_whitelist:
+        - $ORIGIN
+      # Repacked binaries on linux aarch64 have flag DT_TLSDESC (GNU_HASH),
+      # which is not supported by LIEF and can raise ValueError during
+      # overlinking checks. Use specific patterns from files section.
+      overlinking_ignore_patterns:  # [linux and aarch64]
+        - "targets/sbsa-linux/lib/{{ name }}*.so*"  # [linux and aarch64]
+        - "targets/sbsa-linux/lib/stubs/{{ name }}*.so*"  # [linux and aarch64]
+        - "lib/{{ name }}*.so*"  # [linux and aarch64]
+      binary_relocation: false
     requirements:
       build:
         - {{ compiler("c") }}
@@ -74,6 +85,16 @@ outputs:
 
   - name: libnvjpeg-dev
     build:
+      runpath_whitelist:
+        - $ORIGIN
+      # Repacked binaries on linux aarch64 have flag DT_TLSDESC (GNU_HASH),
+      # which is not supported by LIEF and can raise ValueError during
+      # overlinking checks. Use specific patterns from files section.
+      overlinking_ignore_patterns:  # [linux and aarch64]
+        - "targets/sbsa-linux/lib/{{ name }}*.so*"  # [linux and aarch64]
+        - "targets/sbsa-linux/lib/stubs/{{ name }}*.so*"  # [linux and aarch64]
+        - "lib/{{ name }}*.so*"  # [linux and aarch64]
+      binary_relocation: false
       run_exports:
         - {{ pin_subpackage("libnvjpeg", max_pin="x") }}
     files:
