Anaconda specific changes

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -2,11 +2,9 @@
 {% set version = "13.0.1.86" %}
 {% set cuda_version = "13.0" %}
 {% set platform = "linux-x86_64" %}  # [linux64]
-{% set platform = "linux-ppc64le" %}  # [ppc64le]
 {% set platform = "linux-sbsa" %}  # [aarch64]
 {% set platform = "windows-x86_64" %}  # [win]
 {% set target_name = "x86_64-linux" %}  # [linux64]
-{% set target_name = "ppc64le-linux" %}  # [ppc64le]
 {% set target_name = "sbsa-linux" %}  # [aarch64]
 {% set target_name = "x64" %}  # [win]
 {% set extension = "tar.xz" %}  # [not win]
@@ -25,7 +23,7 @@ source:
 build:
   number: 0
   binary_relocation: false
-  skip: true  # [osx or ppc64le]
+  skip: true  # [osx]
 
 requirements:
   build:
@@ -34,21 +32,16 @@ requirements:
 
 outputs:
   - name: libnvjpeg
+    build:
+      # Make sure conda-build won't modify rpaths; see 'test-rpath.sh' for more details
+      binary_relocation: false
+      missing_dso_whitelist:
+        # Needed for rpath issues with conda-build and use of --error-overlinking command-line argument
+        - '$RPATH/libgcc_s.so.1'  # [linux]
     files:
       - lib/libnvjpeg.so.*            # [linux]
       - targets/{{ target_name }}/lib/libnvjpeg.so.*  # [linux]
       - Library\bin\nvjpeg*.dll       # [win]
-    build:
-      runpath_whitelist:
-        - $ORIGIN
-      # Repacked binaries on linux aarch64 have flag DT_TLSDESC (GNU_HASH),
-      # which is not supported by LIEF and can raise ValueError during
-      # overlinking checks. Use specific patterns from files section.
-      overlinking_ignore_patterns:  # [linux and aarch64]
-        - "targets/sbsa-linux/lib/{{ name }}*.so*"  # [linux and aarch64]
-        - "targets/sbsa-linux/lib/stubs/{{ name }}*.so*"  # [linux and aarch64]
-        - "lib/{{ name }}*.so*"  # [linux and aarch64]
-      binary_relocation: false
     requirements:
       build:
         - {{ compiler("c") }}
@@ -82,19 +75,10 @@ outputs:
       description: |
         nvJPEG native runtime libraries
       doc_url: https://docs.nvidia.com/cuda/nvjpeg/index.html
+      dev_url: https://docs.nvidia.com/cuda/nvjpeg/index.html
 
   - name: libnvjpeg-dev
     build:
-      runpath_whitelist:
-        - $ORIGIN
-      # Repacked binaries on linux aarch64 have flag DT_TLSDESC (GNU_HASH),
-      # which is not supported by LIEF and can raise ValueError during
-      # overlinking checks. Use specific patterns from files section.
-      overlinking_ignore_patterns:  # [linux and aarch64]
-        - "targets/sbsa-linux/lib/{{ name }}*.so*"  # [linux and aarch64]
-        - "targets/sbsa-linux/lib/stubs/{{ name }}*.so*"  # [linux and aarch64]
-        - "lib/{{ name }}*.so*"  # [linux and aarch64]
-      binary_relocation: false
       run_exports:
         - {{ pin_subpackage("libnvjpeg", max_pin="x") }}
     files:
@@ -135,6 +119,7 @@ outputs:
       description: |
         nvJPEG native runtime libraries
       doc_url: https://docs.nvidia.com/cuda/nvjpeg/index.html
+      dev_url: https://docs.nvidia.com/cuda/nvjpeg/index.html
 
   - name: libnvjpeg-static
     build:
@@ -162,6 +147,7 @@ outputs:
       description: |
         nvJPEG native runtime libraries
       doc_url: https://docs.nvidia.com/cuda/nvjpeg/index.html
+      dev_url: https://docs.nvidia.com/cuda/nvjpeg/index.html
 
 about:
   home: https://developer.nvidia.com/nvjpeg
@@ -172,8 +158,12 @@ about:
   description: |
     nvJPEG native runtime libraries
   doc_url: https://docs.nvidia.com/cuda/nvjpeg/index.html
+  dev_url: https://docs.nvidia.com/cuda/nvjpeg/index.html
 
 extra:
+  skip-lints:
+    - license_file_overspecified
+    - missing_tests
   recipe-maintainers:
     - conda-forge/cuda
   feedstock-name: libnvjpeg
